<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".SnakeMain" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dialogmessage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right" >

        <Button
            android:id="@+id/rankingyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worldranking" />

        <Button
            android:id="@+id/rankingno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worldrankingno" />
    </LinearLayout>

</LinearLayout>