<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/haikei"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".SnakeMain" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <net.nend.android.NendAdView
            android:id="@+id/nend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            NendApiKey="9a3fbdc1698f53915a0ac0ed6130815288012eba"
            NendSpotId="83521" >
        </net.nend.android.NendAdView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/umaname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/woodborditimaiminikai"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/book"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagebagu"
                android:src="@drawable/hage" />
        </LinearLayout>

        <TextView
            android:id="@+id/introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/woodbord4mini"
            android:gravity="left"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/temp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="50dp"
            android:gravity="right" >

            <Button
                android:id="@+id/runchoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@xml/transparencybutton"
                android:minHeight="48dp"
                android:minWidth="64dp"
                android:text="@string/run"
                android:visibility="gone" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@xml/transparencybutton"
                android:minHeight="48dp"
                android:minWidth="64dp"
                android:text="@string/prev" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@xml/transparencybutton"
                android:minHeight="48dp"
                android:minWidth="64dp"
                android:text="@string/next" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>