<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamehaikei300"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".SnakeMain" >

    <LinearLayout
        android:id="@+id/mainll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:fitsSystemWindows="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|right"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/teisi" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/gamescore"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/itimaiblue"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/gamescore"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="100dp"
            android:layout_weight="0.31"
            android:text="@string/add"
            android:visibility="gone" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/textgameove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/gameover"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />

    </FrameLayout>

</FrameLayout>